try https, added working websocket with sendMessage, getMessages,
