# webapi/models/message.go
@@ -4,11 +4,5 @@ type Message struct {
 	Text      string
 	CreatedAt string
 	EditedAt  string
-	User      string
-}
-
-type AddMessage struct {
-	Text   string
-	ChatId uint32
-	User   string
+	UserId    string
 }
